src/argocd/bootstrap-resources/emqx/emqx-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx-exporter
  labels:
    app: emqx-exporter
spec:
  selector:
    matchLabels:
      app: emqx-exporter
  replicas: 1
  template:
    metadata:
      labels:
        app: emqx-exporter
    spec:
      containers:
        - name: exporter
          image: emqx/emqx-exporter:0.2
          ports:
            - containerPort: 8085
              name: metrics
              protocol: TCP
          args:
            - --config.file
            - /etc/emqx-exporter/config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/emqx-exporter
      volumes:
        - name: config
          configMap:
            name: emqx-exporter-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: emqx-exporter
  name: emqx-exporter-service
spec:
  ports:
    - name: metrics
      port: 8085
      targetPort: metrics
  selector:
    app: emqx-exporter
