src/argocd/bootstrap-resources/emqx/ingresses.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emqx
  namespace: emqx-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mqtt.ryanb.tv`)
      kind: Rule
      services:
        - name: emqx-dashboard
          kind: Service
          port: dashboard
  tls: {}
